[package]
name = "sit-network-auth"
version = "0.1.0"
edition = "2018"
readme = "README.md"
keywords = ["sit","network","auth"]
license = "LGPL-2.1"
repository = "https://github.com/Zhangzqs/sit-network-auth"
description = "基于Rust编写的上海应用技术大学上网认证库与命令行程序"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
exitfailure = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
anyhow = "1.0"
rand = "0.8"