[package]
name = "sit-network-login"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sit-network-auth = { path = "../.." }
tokio = { version = "1", features = ["full"] }
exitfailure = "0.5.1"
structopt = "0.3.22"